--- a/src/components/menu/MenuBar.scss
+++ b/src/components/menu/MenuBar.scss
@@ -70,7 +70,7 @@
   gap: 1.5rem;
 }
 
-.coin-pill {
+.asset-pill {
   display: flex;
   align-items: center;
   position: relative;
@@ -82,7 +82,7 @@
   width: 135px;
   color: #fff;
 
-  .coin-icon {
+  .asset-icon {
     position: absolute;
     left: -15px;
     width: 60px;
@@ -91,15 +91,18 @@
     img {
       width: 100%;
       height: 100%;
+      object-fit: contain;
     }
   }
 
-  .coin-balance {
+  .asset-value {
     font-size: 1.1rem;
     font-weight: 600;
     margin: 0 auto;
     transform: translateX(10px);
     text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+    min-width: 64px;
+    text-align: center;
   }
 
   .balance-spinner {
@@ -109,6 +112,7 @@
     border-top-color: #ffffff;
     border-radius: 50%;
     animation: spin 1s linear infinite;
+    margin: 0 auto;
   }
 }
 
